--- a/index.html
+++ b/index.html
@@ -8,8 +8,26 @@
     <script src="index.js" defer></script>
 </head>
 <body>
-    <h1>PackList Project</h1>
-    <section id="activity-section">Activities!</section>
+    <header>
+        <div class="triangle">
+            <div class="top"></div>
+            <div class="middle"></div>
+            <div class="bottom"></div>
+        </div>
+        <h1 id="title">PackList Project</h1>
+        <a id="sign-in" href="#">Sign in</a>
+    </header>
     
+    <main>
+        <section id="activity-section"></section>
+    </main>
+
+    <footer>
+        <p>Copyright 2020</p>
+        <p>Contact Information:</p>
+        <p>Shelly Brook - @@@</p>
+        <p>Kyle Trahan - ktrahan2@gmail.com</p>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.0/anime.min.js"></script>
+    </footer>
 </body>
 </html>
