--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
             <div class="middle"></div>
             <div class="bottom"></div>
         </div>
-        <h1 id="title">PackList Project</h1>
-        <a id="sign-in" href="#">Sign in</a>
+        <h1 id="title">Gear Check</h1>
+        <form method="GET" action="go to sign in html">
+            <input type="submit" id="sign-in-button" href="#" value='Sign In'/>
+        </form>
     </header>
     
     <main>
@@ -26,7 +28,7 @@
         <p>Copyright 2020</p>
         <p>Contact Information:</p>
         <p>Shelly Brook - @@@</p>
-        <p>Kyle Trahan - ktrahan2@gmail.com</p>
+        <p>Kyle Trahan - ktrahan2@gmail.com linked in accounts?</p>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.0/anime.min.js"></script>
     </footer>
 </body>
