--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <div class="bottom"></div>
         </div>
         <h1 id="title">Gear Check</h1>
-        <form method="GET" action="go to sign in html">
-            <input type="submit" id="sign-in-button" href="#" value='Sign In'/>
+        <form method="GET" action="sign in page">
+            <input type="submit" id="sign-in-button" value='Sign In'/>
         </form>
     </header>
     
