activity card update

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
             <div class="middle"></div>
             <div class="bottom"></div>
         </div>
-        <h1 id="title">Gear Check</h1>
+        
+        <h1 id="title">Gear Check/Pack Your Bags <h1>
         <form method="GET" action="sign in page">
             <input type="submit" id="sign-in-button" value='Sign In'/>
         </form>
@@ -23,6 +24,8 @@
     <main>
         <section id="activity-section"></section>
     </main>
+
+    
 
     <footer>
         <p>Copyright 2020</p>
