added sign-in html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         
         <h1 id="title">Gear Check/Pack Your Bags <h1>
-        <form method="GET" action="sign in page">
+        <form method="GET" action="sign-in.html">
             <input type="submit" id="sign-in-button" value='Sign In'/>
         </form>
     </header>
