login page added

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         </div>
         
         <h1 id="title">Gear Check/Pack Your Bags <h1>
-        <form method="GET" action="sign in page">
-            <input type="submit" id="sign-in-button" value='Sign In'/>
+        <form method="GET" action="http://localhost:3001/login.html">
+            <input type="submit" id="sign-in-button" value='Sign In / Up'/>
         </form>
     </header>
     
@@ -30,7 +30,7 @@
     <footer>
         <p>Copyright 2020</p>
         <p>Contact Information:</p>
-        <p>Shelly Brook - @@@</p>
+        <p>Shelley Brook - @@@</p>
         <p>Kyle Trahan - ktrahan2@gmail.com linked in accounts?</p>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.0/anime.min.js"></script>
     </footer>
