activity page linked to user. checkboxes for gear submit

--- a/activity.html
+++ b/activity.html
@@ -10,8 +10,14 @@
 <body>
     <header><a href="index.html">HOME</a></header>
     <section id="activity-header"></section>
-    <section id="packing-list">
+    <section>
         <h2>Suggested Packing List:</h2>
+        <form method="POST" action="http://localhost:3500/user_packs">
+            <div id="packing-list"></div>
+            <label for="list-name">Name Your Packing List</label>
+            <input id="list-name" type="text" name="list_name" placeholder="i.e. Shelley's backpack">
+            <input type="submit" value="Add Items">
+        </form>
     </section>
 </body>
 </html>
