--- a/profile.html
+++ b/profile.html
@@ -7,6 +7,7 @@
     <script src="profile.js" defer></script>
 </head>
 <body>
-    <h1>PROFILE</h1>
+    <header id="profile-header"></header>
+    <nav id="activity-section"></nav>
 </body>
 </html>
