--- a/activity.html
+++ b/activity.html
@@ -12,7 +12,7 @@
     <section id="activity-header"></section>
     <section>
         <h2>Suggested Packing List:</h2>
-        <form method="POST" action="http://localhost:3500/user_packs">
+        <form method="POST" action="http://localhost:3500/users/${user_id}">
             <div id="packing-list"></div>
             <label for="list-name">Name Your Packing List</label>
             <input id="list-name" type="text" name="list_name" placeholder="i.e. Shelley's backpack">
