--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="bottom"></div>
         </div>
         
-        <h1 id="title">Gear Check/Pack Your Bags <h1>
+        <h1 id="title">Gear Check<h1>
         <form method="GET" action="http://localhost:3001/login.html">
             <input type="submit" id="sign-in-button" value='Sign In / Up'/>
         </form>
