started adding built list to profile

--- a/activity.html
+++ b/activity.html
@@ -8,7 +8,9 @@
     <script src="activity.js" defer></script>
 </head>
 <body>
-    <header id="home-button"><a href="index.html">HOME</a></header>
+    <header id="home-button">
+        <a href="index.html">HOME</a>
+    </header>
     <section id="activity-header"></section>
 
     <section>
