--- a/profile.html
+++ b/profile.html
@@ -5,9 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile Page</title>
     <script src="profile.js" defer></script>
+    <link rel="stylesheet" href="profile.css">
 </head>
 <body>
-    <header id="profile-header"></header>
-    <nav id="activity-section"></nav>
+    <a id="home-button" href="/">HOME</a>
+    <header id="profile-header">
+    </header>
+    <section id="activity-section"></section>
+    <section id="packed-bags"></section>
+      
 </body>
 </html>
