--- a/login.html
+++ b/login.html
@@ -5,21 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <script src="login.js" defer></script>
+    <link rel="stylesheet" href="login.css">
 </head>
 <body>
-    <h1>LOGIN</h1>
-    <p>Sign Up Now</p>
-    <form method="POST" action="http://localhost:3500/users">
-        <input name="name" placeholder="Your First Name" type="text">
-        <input name="username" placeholder="Enter Username" type="text">
-        <input name="password" placeholder="Enter Password" type="password">
-        <input type="submit" value="Create User">
-    </form>
-    <p>Sign In</p>
-    <form method="POST" action="http://localhost:3500/login">
-        <input name="username" placeholder="Enter Username" type="text">
-        <input name="password" placeholder="Enter Password" type="password">
-        <input type="submit" value="Login">
-    </form>
+    <header><h1>PACKLIST</h1></header>        
+    <main>
+        <section>
+            <h2>New User</h2>
+            <p>Create an account to get started!</p>
+            <form method="POST" action="http://localhost:3500/users">
+                <input name="name" placeholder="Your First Name" type="text">
+                <input name="username" placeholder="Enter Username" type="text">
+                <input name="password" placeholder="Enter Password" type="password">
+                <input type="submit" value="Create User">
+            </form>
+        </section>
+        <section>
+            <h2>Sign In</h2>
+            <p>Welcome Back, we have saved your lists!</p>
+            <form method="POST" action="http://localhost:3500/login">
+                <input name="username" placeholder="Enter Username" type="text">
+                <input name="password" placeholder="Enter Password" type="password">
+                <input type="submit" value="Login">
+            </form>
+        </section>
+    </main>
 </body>
 </html>
