styled home button

--- a/activity.html
+++ b/activity.html
@@ -8,8 +8,10 @@
     <script src="activity.js" defer></script>
 </head>
 <body>
-    <header id="home-button">
-        <a href="index.html">HOME</a>
+    <header>
+        <form method="GET" action="http://localhost:3001/activities">
+            <input type="submit" id="home-button" value='Home'/>
+        </form>
     </header>
     <section id="activity-header"></section>
 
