--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
         <p>Copyright 2020</p>
         <p>Contact Information:</p>
         <p>Shelley Brook - @@@</p>
-        <p>Kyle Trahan - ktrahan2@gmail.com linked in accounts?</p>
+        <p>
+            Kyle Trahan - <a href="https://www.linkedin.com/in/kyle-trahan-8384678b/">Linkedin</a>
+            - Email : ktrahan2@gmail.com
+        </p>
+            
         <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.0/anime.min.js"></script>
     </footer>
 
