--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
     </main>
 
     <footer>
-        <p>Copyright 2020</p>
+        <p>©2020</p>
         <p>Contact Information:</p>
-        <p>Shelley Brook - @@@</p>
+        <p>Shelley Brook - <a href="https://www.linkedin.com/in/sbrook13/">Linkedin</a>
+            - Email : sbrook13@gmail.com
+        </p>
         <p>
             Kyle Trahan - <a href="https://www.linkedin.com/in/kyle-trahan-8384678b/">Linkedin</a>
             - Email : ktrahan2@gmail.com
