--- a/activity.html
+++ b/activity.html
@@ -19,11 +19,11 @@
         <h2>Suggested Packing List</h2>
         <form id="gearCard" method="POST" action="http://localhost:3500/user_packs">
             <div id="packing-list"></div>
-            <div class="label-input">
-                <label for="list-name">Name Your Packing List:</label>
-                <input id="list-name" type="text" name="list_name" placeholder="i.e. Shelley's backpack">
+            <div>
+                <label class="label-input" for="list-name">Name Your Packing List:</label>
+                <input class="label-input" id="list-name" type="text" name="list_name" placeholder="i.e. Shelley's backpack">
+                <input class="label-input" type="submit" value="Add Items">
             </div>
-            <input type="submit" value="Add Items">
         </form>
     </section>
 </body>
