added route to login

--- a/activity.html
+++ b/activity.html
@@ -17,7 +17,7 @@
 
     <section>
         <h2>Suggested Packing List</h2>
-        <form id="gearCard" method="POST" action="http://localhost:3500/user_packs">
+        <form id="gearCard" method="POST" action="profile.html">
             <div id="packing-list"></div>
             <div>
                 <label class="label-input" for="list-name">Name Your Packing List:</label>
