--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
         </div>   
 
         <h1 id="title">GEAR CHECK<h1>
-        <form method="GET" action="http://localhost:3001/login.html">
+        <form method="GET" action="http://localhost:3001/profile.html">
             <input type="submit" id="profile-button" value='View Your Lists'/>
         </form>
     </header>
