--- a/activity.html
+++ b/activity.html
@@ -17,11 +17,11 @@
 
     <section>
         <h2>Suggested Packing List</h2>
-        <form id="gearCard" method="POST" action="profile.html">
+        <form id="gearCard" method="POST" action="http://localhost:3500/packs">
             <div id="packing-list"></div>
             <div>
                 <label class="label-input" for="list-name">Name Your Packing List:</label>
-                <input class="label-input" id="list-name" type="text" name="list_name" placeholder="i.e. Shelley's backpack">
+                <input class="label-input" id="list-name" type="text" name="name" placeholder="i.e. Shelley's backpack">
                 <input class="label-input" type="submit" value="Add Items">
             </div>
         </form>
