profile view button

--- a/home.html
+++ b/home.html
@@ -16,7 +16,8 @@
         </div>   
 
         <h1 id="title">GEAR CHECK<h1>
-        <form id="profile-button" method="GET" action="">
+            
+        <form id="profile-button" method="POST" action="http://localhost:3500/profile">
             <input type="submit" id="profile-button" value='View Your Lists'/>
         </form>
     </header>
