update home button

--- a/profile.html
+++ b/profile.html
@@ -11,7 +11,7 @@
     <a id="home-button" href="/"></a>
     <header id="profile-header"></header>
     <nav>
-        <form id="default-lists-button" method="GET" action="">
+        <form id="default-lists-button" method="POST" action="http://localhost:3500/home">
             <input type="submit" id="default-lists-button" value='See Default Packing Lists'/>
         </form>
         <form id="update-profile-button" method="POST" action="">
