updated activity home button

--- a/activity.html
+++ b/activity.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <form method="GET" action="http://localhost:3001/activities">
+        <form id="home-button" method="POST" action="http://localhost:3500/home">
             <input type="submit" id="home-button" value='Home'/>
         </form>
     </header>
