pack page connected to backend

--- a/pack.html
+++ b/pack.html
@@ -8,7 +8,10 @@
     <script src="pack.js" defer></script>
 </head>
 <body>
+    <form id="profile-button" method="POST" action="http://localhost:3500/profile">
+        <input type="submit" id="profile-button" value='Back to your profile'/>
+    </form>
     <header></header>
-    <section id="selected-gear"></section>
+    <section id="gear-section"></section>
 </body>
 </html>
