update home page

--- a/home.html
+++ b/home.html
@@ -15,15 +15,15 @@
             <div class="bottom"></div>
         </div>   
 
-        <h1 id="title">GEAR CHECK<h1>
+        <h1 id="title">GEAR UP<h1>
 
         <form id="profile-button" method="POST" action="http://localhost:3500/profile">
             <input type="submit" id="profile-button" value='View Your Lists'/>
         </form>
         
     </header>
-    
     <main>
+        <p>Select an activity to get started!</p>
         <section id="activity-section"></section>
     </main>
 
