css updates to home page and index

--- a/home.html
+++ b/home.html
@@ -15,16 +15,18 @@
             <div class="bottom"></div>
         </div>   
 
-        <h1 id="title">GEAR UP<h1>
-
-        <form id="profile-button" method="POST" action="http://localhost:3500/profile">
-            <input type="submit" id="profile-button" value='View Your Lists'/>
-        </form>
-        
+        <h1 id="title">GEAR UP<h1>        
     </header>
+
+    <nav>
+        <form id="profile-button" method="POST" action="http://localhost:3500/profile">
+            <input type="submit" id="profile-button" value='View Your Packing Lists'/>
+        </form>
+    </nav>
+
     <main>
         <p>Select an activity to get started!</p>
-        <section id="activity-section"></section>
+        <section id="cards-section"></section>
     </main>
 
     <footer>
