--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <input name="name" placeholder="Your First Name" type="text">
                 <input name="username" placeholder="Enter Username" type="text">
                 <input name="password" placeholder="Enter Password" type="password">
-                <input type="submit" value="Create User">
+                <input type="submit" value="Create User" id="submit-button">
             </form>
         </section>
         <section>
@@ -26,7 +26,7 @@
             <form method="POST" action="http://localhost:3500/login">
                 <input name="username" placeholder="Enter Username" type="text">
                 <input name="password" placeholder="Enter Password" type="password">
-                <input type="submit" value="Login">
+                <input type="submit" value="Login" id="submit-button">
             </form>
         </section>
     </main>
