streamlined some css

--- a/activity.html
+++ b/activity.html
@@ -8,11 +8,12 @@
     <script src="activity.js" defer></script>
 </head>
 <body>
-    <header>
+    <nav>        
         <form id="home-button" method="POST" action="http://localhost:3500/home">
-            <input type="submit" id="home-button" value='Home'/>
+        <input type="submit" id="home-button" value='Home'/>
         </form>
-    </header>
+    </nav>
+    <header></header>
     <section id="activity-header"></section>
 
     <section>
