updated profile page css

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="index.js" defer></script>
     <link rel="stylesheet" href="index.css">
 </head>
-<body>
+<body id="login-page">
     <header><h1>PACKLIST</h1></header>        
     <main>
         <section>
