finished pack css

--- a/pack.html
+++ b/pack.html
@@ -8,10 +8,16 @@
     <script src="pack.js" defer></script>
 </head>
 <body>
-    <form id="profile-button" method="POST" action="http://localhost:3500/profile">
-        <input type="submit" id="profile-button" value='Back to your profile'/>
-    </form>
-    <header></header>
+    <header id="pack-header">
+        <form id="profile-button" method="POST" action="http://localhost:3500/profile">
+            <input type="submit" id="profile-button" value='Back to your profile'/>
+        </form>
+    </header>   
+
+    <main>
     <section id="gear-section"></section>
+    </main>
+
 </body>
+
 </html>
