--- a/profile.html
+++ b/profile.html
@@ -14,12 +14,10 @@
         <form method="POST" action="http://localhost:3500/home">
             <input type="submit" id="default-lists-button" value='New Trip? Start with a Standard Packing List!' id="default-lists-button" style="font-size:18px" >
         </form>
-        <form method="POST" action="">
-            <input type="hidden" name="_method" value="PUT"/>
-            <input type="name" name="name" placeholder="update your name" />
-            <input type="username" name="username" placeholder="update your username" />
+        <form id="update-user-information" method="POST" action="">
+            <input type="hidden" name="_method" value="put"/>
             <input type="password" name="password" placeholder="update your password" />
-            <input type="submit" id="update-profile-button" value='Update Profile'/>
+            <input type="submit" id="update-profile-button" value='Update Password'/>
         </form>
     </nav>
     <section id="pack-section"></section>
