create sign-out button

--- a/profile.html
+++ b/profile.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="profile.css">
 </head>
 <body>
-    <a id="home-button" href="/"></a>
-    <header id="profile-header"></header>
+    <header id="profile-header">
+        <a id="sign-out" href="index.html">SIGN OUT</a>
+    </header>
     <nav>
         <form method="POST" action="http://localhost:3500/home">
             <input type="submit" id="default-lists-button" value='New Trip? Start with a Standard Packing List!' id="default-lists-button" style="font-size:18px" >
